# Teoria_da_Descis-o_Final

Algorithms/TC2/: pyproject.toml
Algorithms/TC2/tc2/: main.ipynb
Algorithms/TC3/: pyproject.toml
Algorithms/TC3/tc3/: main.ipynb
Algorithms/TC4/: pyproject.toml
Algorithms/data/: data.csv
